--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 	<div class="row">
 		<div class="thumbnail">
 			<div>
-				<div class="col-md-3 text-center thumbnail_inner">
+				<div class="col-md-3 text-center thumbnail_inner odd">
 					<h4>IT Administrator</h4>
 					<h5>Generate and deliver audit and compliance reports faster.</h5>
 					<p class="hidden_text">Stop spending time on manual scripting and consolidation of audit data whenever you need reports about who’s making changes to IT systems or who has permissions to what.</p>
@@ -45,7 +45,7 @@
 		</div>
 		<div class="thumbnail">
 			<div>
-				<div class="col-md-3 text-center thumbnail_inner">
+				<div class="col-md-3 text-center thumbnail_inner even">
 					<h4>IT Security Administrator</h4>
 					<h5>Investigate suspicious user activity before the data breach occurs.</h5>
 					<p class="hidden_text">Enable security audit and keep yourself notified on the critical changes in the IT environment. Whenever you see an action that violates your security policy, remain assured that you can investigate why it happened and prevent similar incidents from occurring.</p>
@@ -59,7 +59,7 @@
 		</div>
 		<div class="thumbnail">
 			<div>
-				<div class="col-md-3 text-center thumbnail_inner">
+				<div class="col-md-3 text-center thumbnail_inner odd">
 					<h4>MSP</h4>
 					<h5>Enable visibility of managed environments and monetize on offering “Compliance as a Service”.</h5>
 					<p class="hidden_text">Whether you are planning on adding new services to increase customer revenue or adding differentiated services that show more value to your customer, Netwrix has a business model to support your revenue goals.</p>
@@ -80,7 +80,7 @@
 
 		<div class="thumbnail">
 			<div>
-				<div class="col-md-3 text-center thumbnail_inner">
+				<div class="col-md-3 text-center thumbnail_inner odd">
 					<h4>IT Manager</h4>
 					<h5>Take back control over your IT infrastructure and eliminate stress of your next compliance audit.</h5>
 					<p class="hidden_text">See how often changes are made, which users are making changes, which systems are affected, who has access to what and more. Address compliance auditors’ questions faster and involving less resources of your staff.</p>
@@ -94,7 +94,7 @@
 		</div>
 		<div class="thumbnail">
 			<div>
-				<div class="col-md-3 text-center thumbnail_inner">
+				<div class="col-md-3 text-center thumbnail_inner even">
 					<h4>IT Director, CIO/CISO</h4>
 					<h5>Mitigate security risks and minimize compliance costs.</h5>
 					<p class="hidden_text">Protect your organization from attackers who managed to bypass your perimeter security (firewalls, anti-viruses, etc.) and avoid fines for non-compliance with regulatory standards.</p>
